Full charm redux
Rename inline with accepted naming for K8S charmed operators.

Rename interface to align with both the charm name and the
interface type (rather than the endpoint name of amqp).

Update to support Traefik as an ingress controller for access
to the Management WebUI.

Switch default ServiceType to LoadBalancer to allow access from
outside of Kubernetes.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-# Copyright 2021 David Ames
+# Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
-name: sunbeam-rabbitmq-operator
+name: rabbitmq-k8s
 description: RabbitMQ
 summary: RabbitMQ charmed operator for Kubernetes
 
@@ -30,7 +30,8 @@ provides:
 requires:
   ingress:
     interface: ingress
+    limit: 1
 
 peers:
   peers:
-    interface: rabbitmq-operator-peer
+    interface: rabbitmq-peer
