--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands = flake8 src tests
 [testenv:pep8]
 basepython = python3
 deps = -r{toxinidir}/requirements-dev.txt
-commands = flake8 {posargs} src tests lib
+commands = flake8 {posargs} src tests lib/rabbitmq_k8s
 
 [testenv:venv]
 basepython = python3
