--- a/tox.ini
+++ b/tox.ini
@@ -1,72 +1,157 @@
-# Operator charm (with zaza): tox.ini
+# Source charm: ./tox.ini
+# This file is managed centrally by release-tools and should not be modified
+# within individual charm repos.  See the 'global' dir contents for available
+# choices of tox.ini for OpenStack Charms:
+#     https://github.com/openstack-charmers/release-tools
 
 [tox]
-envlist = pep8,py3
 skipsdist = True
-# NOTE: Avoid build/test env pollution by not enabling sitepackages.
+envlist = pep8,py3
 sitepackages = False
-# NOTE: Avoid false positives by not skipping missing interpreters.
 skip_missing_interpreters = False
+minversion = 3.18.0
+
+[vars]
+src_path = {toxinidir}/src/
+tst_path = {toxinidir}/tests/
+lib_path = {toxinidir}/lib/
+pyproject_toml = {toxinidir}/pyproject.toml
+all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
-setenv = VIRTUAL_ENV={envdir}
-         PYTHONHASHSEED=0
-         CHARM_DIR={envdir}
-         PYTHONPATH=lib:src
+basepython = python3
+setenv =
+  PYTHONPATH = {toxinidir}:{[vars]lib_path}:{[vars]src_path}
+passenv =
+  PYTHONPATH
 install_command =
   pip install {opts} {packages}
-whitelist_externals =
-    charmcraft
-    git
-    add-to-archive.py
-    bash
-    juju
-    ln
-passenv = HOME TERM CS_* OS_* TEST_*
+commands = stestr run --slowest {posargs}
+allowlist_externals =
+  git
+  charmcraft
+  fetch-libs.sh
+  rename.sh
+deps =
+  -r{toxinidir}/test-requirements.txt
 
-[testenv:py3]
-basepython = python3
-deps = -r{toxinidir}/requirements-dev.txt
-commands = flake8 src tests
-           coverage run --source=src -m unittest -v
-           coverage report -m
-
-
-[testenv:pep8]
-basepython = python3
-deps = -r{toxinidir}/requirements-dev.txt
-commands = flake8 {posargs} src tests lib/rabbitmq_k8s
-
-[testenv:venv]
-basepython = python3
-deps = -r{toxinidir}/requirements-dev.txt
-commands = ln -s -f .tox/venv .
-           ./run_tests
+[testenv:fmt]
+description = Apply coding style standards to code
+deps =
+    black
+    isort
+commands =
+    isort {[vars]all_path} --skip-glob {[vars]lib_path} --skip {toxinidir}/.tox
+    black --config {[vars]pyproject_toml} {[vars]all_path} --exclude {[vars]lib_path}
 
 [testenv:build]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/requirements-dev.txt
+deps =
 commands =
-    flake8 {posargs} src tests
-    charmcraft build
+  charmcraft -v pack
+  {toxinidir}/rename.sh
 
-[testenv:refresh]
+[testenv:fetch]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/requirements-dev.txt
+deps =
 commands =
-    juju refresh thedac-rabbitmq-operator --path ./thedac-rabbitmq-operator.charm
+  {toxinidir}/fetch-libs.sh
 
-[testenv:deploy]
+[testenv:py3]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/requirements-dev.txt
+deps =
+  {[testenv]deps}
+  -r{toxinidir}/requirements.txt
+
+[testenv:py38]
+basepython = python3.8
+deps = {[testenv:py3]deps}
+
+[testenv:py39]
+basepython = python3.9
+deps = {[testenv:py3]deps}
+
+[testenv:py310]
+basepython = python3.10
+deps = {[testenv:py3]deps}
+
+[testenv:cover]
+basepython = python3
+deps = {[testenv:py3]deps}
+setenv =
+    {[testenv]setenv}
+    PYTHON=coverage run
 commands =
-    juju deploy ./thedac-rabbitmq-operator --resource thedac-rabbitmq-image=rabbitmq
+    coverage erase
+    stestr run --slowest {posargs}
+    coverage combine
+    coverage html -d cover
+    coverage xml -o cover/coverage.xml
+    coverage report
 
+[testenv:pep8]
+description = Alias for lint
+deps = {[testenv:lint]deps}
+commands = {[testenv:lint]commands}
 
+[testenv:lint]
+description = Check code against coding style standards
+deps =
+    black
+    # flake8==4.0.1 # Pin version until https://github.com/csachs/pyproject-flake8/pull/14 is merged
+    flake8
+    flake8-docstrings
+    flake8-copyright
+    flake8-builtins
+    pyproject-flake8
+    pep8-naming
+    isort
+    codespell
+commands =
+    codespell {[vars]all_path} 
+    # pflake8 wrapper supports config from pyproject.toml
+    pflake8 --exclude {[vars]lib_path} --config {toxinidir}/pyproject.toml {[vars]all_path}
+    isort --check-only --diff {[vars]all_path} --skip-glob {[vars]lib_path}
+    black  --config {[vars]pyproject_toml} --check --diff {[vars]all_path} --exclude {[vars]lib_path}
+
+[testenv:func-noop]
+basepython = python3
+commands =
+    functest-run-suite --help
+
+[testenv:func]
+basepython = python3
+commands =
+    functest-run-suite --keep-model
+
+[testenv:func-smoke]
+basepython = python3
+setenv =
+    TEST_MODEL_SETTINGS = automatically-retry-hooks=true
+    TEST_MAX_RESOLVE_COUNT = 5
+commands =
+    functest-run-suite --keep-model --smoke
+
+[testenv:func-dev]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --dev
+
+[testenv:func-target]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --bundle {posargs}
+
+[coverage:run]
+branch = True
+concurrency = multiprocessing
+parallel = True
+source =
+    .
+omit =
+    .tox/*
+    tests/*
+    src/templates/*
 
 [flake8]
-# Ignore E902 because the unit_tests directory is missing in the built charm.
-ignore = E402,E226,E902,W504
+ignore=E226,W504
