--- a/.github/workflows/release-edge.yaml
+++ b/.github/workflows/release-edge.yaml
@@ -43,15 +43,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Select charmhub channel
-        uses: canonical/charming-actions/channel@1.0.0
+      - name: Select Charmhub channel
+        uses: canonical/charming-actions/channel@2.0.0-rc
         id: channel
-
-      - name: Upload charm to charmhub
-        uses: canonical/charming-actions/upload-charm@1.0.0
+      - name: Upload charm to Charmhub
+        uses: canonical/charming-actions/upload-charm@2.0.0-rc
         with:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-          upload-image: "true"
-          channel: "${{ steps.channel.outputs.name }}"
+          channel: "${{ steps.channel.outputs.name }}"    
