--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,8 +1,24 @@
-type: charm
+type: "charm"
 bases:
-  - name: ubuntu
-    channel: "20.04"
+  - build-on:
+    - name: "ubuntu"
+      channel: "22.04"
+    run-on:
+    - name: "ubuntu"
+      channel: "22.04"
 parts:
+  update-certificates:
+    plugin: nil
+    override-build: |
+      apt update
+      apt install -y ca-certificates
+      update-ca-certificates
+
   charm:
+    after: [update-certificates]
     build-packages:
       - git
+      - libffi-dev
+      - libssl-dev
+      - rustc
+      - cargo
