--- a/.github/workflows/release-edge.yaml
+++ b/.github/workflows/release-edge.yaml
@@ -43,12 +43,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Select Charmhub channel
-        uses: canonical/charming-actions/channel@2.1.1
-        id: channel
       - name: Upload charm to Charmhub
         uses: canonical/charming-actions/upload-charm@2.1.1
         with:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-          channel: "${{ steps.channel.outputs.name }}"    
+          channel: 3.9/edge
