Update allowlist_externals with full path to commands

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ commands = stestr run --slowest {posargs}
 allowlist_externals =
   git
   charmcraft
-  fetch-libs.sh
-  rename.sh
+  {toxinidir}/fetch-libs.sh
+  {toxinidir}/rename.sh
 deps =
   -r{toxinidir}/test-requirements.txt
 
