Speedup charm build

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -22,3 +22,7 @@ parts:
       - libssl-dev
       - rustc
       - cargo
+    charm-binary-python-packages:
+      - cryptography
+      - jsonschema
+      - jinja2
