Use binary-python-packages for speed

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -22,3 +22,6 @@ parts:
       - libssl-dev
       - rustc
       - cargo
+    charm-binary-python-packages:
+      - cryptography
+      - jsonschema
