--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup operator environment
+      - name: Install Tox
+        run: pip install tox
+      - name: Setup microk8s
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
           channel: 1.26-strict/stable
           juju-channel: 3.1/stable
           microk8s-addons: hostpath-storage dns rbac metallb:10.64.140.40-10.64.140.49
-      - name: Install dependencies
+      - name: Install snaps
         run: |
           sudo snap install --classic terraform
           sudo snap install --classic juju-wait
@@ -32,3 +34,7 @@ jobs:
       - name: Build Charm
         run: |
           sg lxd -c "charmcraft -v pack"
+          mv rabbitmq-k8s*charm rabbitmq-k8s.charm
+      - name: Run functional tests
+        run: |
+          tox -e func-smoke
