--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -2,6 +2,8 @@ gate_bundles:
   - smoke
 smoke_bundles:
   - smoke
+tests:
+  - zaza.openstack.charm_tests.rabbitmq_server.tests_k8s.RabbitMQK8STest
 tests_options:
   trust:
     - smoke
