--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,7 @@ resources:
   rabbitmq-image:
     type: oci-image
     description: OCI image for rabbitmq
-    upstream-source: ghcr.io/openstack-snaps/rabbitmq:3.9.13
+    upstream-source: docker.io/rabbitmq:3.12.1-management
 
 storage:
   rabbitmq-data:
