--- a/tests/bundles/smoke.yaml
+++ b/tests/bundles/smoke.yaml
@@ -6,4 +6,4 @@ applications:
     scale: 1
     trust: true
     resources:
-      rabbitmq-image: ghcr.io/openstack-snaps/rabbitmq:3.9.13
+      rabbitmq-image: docker.io/rabbitmq:3.12.1-management
