Implement ensure-ha
Implement ensure-ha utility both as an action and as an automated
operation.

Use action when queue management is disabled, or auto-ha-frequency is
too long.

Ensure-ha will add members to queue based on how many queues a member
already has, to try to balance number of queues in larger clusters.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/actions.yaml
+++ b/actions.yaml
@@ -22,7 +22,7 @@ get-service-account:
 
 ensure-queue-ha:
   description: |
-    Check for queues that have insufficent memebers for high
+    Check for queues that have insufficent members for high
     availability and, if possible, add members to them.
   params:
     dry-run:
