Implement logging relation
The logging relation allows forwarding all stdout logs to a central
loki.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,9 @@ requires:
   ingress:
     interface: ingress
     limit: 1
+  logging:
+    interface: loki_push_api
+    optional: true
 
 peers:
   peers:
