Migrate base to ubuntu@24.04
Unify charmcraft.yaml to charmcraft 3 syntax, unpin flake8 for 3.12
compatibility.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,8 @@ all_path = {[vars]src_path} {[vars]tst_path}
 [testenv]
 basepython = python3
 setenv =
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
   PYTHONPATH = {toxinidir}:{[vars]lib_path}:{[vars]src_path}
 passenv =
   PYTHONPATH
@@ -76,6 +78,10 @@ deps = {[testenv:py3]deps}
 basepython = python3.10
 deps = {[testenv:py3]deps}
 
+[testenv:py312]
+basepython = python3.12
+deps = {[testenv:py3]deps}
+
 [testenv:cover]
 basepython = python3
 deps = {[testenv:py3]deps}
@@ -99,7 +105,7 @@ commands = {[testenv:lint]commands}
 description = Check code against coding style standards
 deps =
     black
-    flake8<6
+    flake8
     flake8-docstrings
     flake8-copyright
     flake8-builtins
@@ -108,7 +114,7 @@ deps =
     isort
     codespell
 commands =
-    codespell {[vars]all_path} 
+    codespell {[vars]all_path}
     # pflake8 wrapper supports config from pyproject.toml
     pflake8 --exclude {[vars]lib_path} --config {toxinidir}/pyproject.toml {[vars]all_path}
     isort --check-only --diff {[vars]all_path} --skip-glob {[vars]lib_path}
@@ -116,29 +122,43 @@ commands =
 
 [testenv:func-noop]
 basepython = python3
+setenv =
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
 commands =
     functest-run-suite --help
 
 [testenv:func]
 basepython = python3
+setenv =
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
 commands =
     functest-run-suite --keep-model
 
 [testenv:func-smoke]
 basepython = python3
 setenv =
-    TEST_MODEL_SETTINGS = automatically-retry-hooks=true;update-status-hook-interval=1m
-    TEST_MAX_RESOLVE_COUNT = 5
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
+  TEST_MODEL_SETTINGS = automatically-retry-hooks=true;update-status-hook-interval=1m
+  TEST_MAX_RESOLVE_COUNT = 5
 commands =
     functest-run-suite --keep-model --smoke
 
 [testenv:func-dev]
 basepython = python3
+setenv =
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
 commands =
     functest-run-suite --keep-model --dev
 
 [testenv:func-target]
 basepython = python3
+setenv =
+  # Set TEST_JUJU3 To unpin juju<3 in zaza
+  TEST_JUJU3 = 1
 commands =
     functest-run-suite --keep-model --bundle {posargs}
 
