Remove deprecated kubernetes_service_patch
Charm uses kubernetes_service_patch library to
update the k8s service with type loadbalancer.
However the library is deprecated.

Use lightkube_extensions.KubernetesResourceManager
to create or patch k8s service for rabbitmq.
Create new service with name rabbitmq-lb.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ rabbitmq-admin
 tenacity
 lightkube
 lightkube-models
+lightkube-extensions @ git+https://github.com/canonical/lightkube-extensions.git@main
 jsonschema
